--- a/TODO
+++ b/TODO
@@ -79,3 +79,6 @@ text, but doesn't show comments
 => En fait,  Étudier la possibilité pour l'utilisateur de fournir ses propres
    layouts, pas seulement le UserLayout. Ce serait encore mieux pour
    marginnote, mparhack etc. 
+
+* Revoir les cas de noexpand/expandafter, à simplifier avec \let\foo\relax
+pour éviter l'expansion
