Add a \MessageBreak in \@fxdeprecatedcmdwarning

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -789,7 +789,8 @@
 %    \begin{macrocode}
 \newcommand*\@fxdeprecatedcmdwarning[2]{%
   \@fxpkgwarning{%
-    \@fxcsstring{#1} is deprecated; please use \@fxcsstring{#2} instead}}
+    \@fxcsstring{#1} is deprecated;\MessageBreak
+    please use \@fxcsstring{#2} instead}}
 %    \end{macrocode}
 % \end{macro}
 % \begin{macro}{\@fxnewdeprecatedcmd}
