--- a/fixme.dtx
+++ b/fixme.dtx
@@ -1474,26 +1474,26 @@
 % \end{counter}
 % \begin{macro}{\@fxnoteparameters}
 %   \marg{type}\\
-%   The following macro creates all required note parameters:
+%   The following macro creates all required note parameters. This currently
+%   comprises the note counter, name and index name. Backward compatibility
+%   on the counter and index name is also ensured automatically.
 %    \begin{macrocode}
 \newcommand*\@fxnoteparameters[1]{%
   \newcounter{fx#1count}
-  \expandafter\newcommand\expandafter*\csname fx#1prefix\endcsname{}
+  \expandafter\newcommand\expandafter*\csname fx#1name\endcsname{}
   \expandafter\newcommand\expandafter*\csname fx#1indexname\endcsname{}
 
   \@fxcounterrename{#1}
-  \@fxprefixdeprecatercmd{#1prefix}
   \@fxprefixdeprecatercmd{#1indexname}}
 
 %    \end{macrocode}
 % \end{macro}
 % \begin{counter}{fx*count}
 %   \begin{macro}{\thefixme*count}
-%     \begin{macro}{\fx*prefix}
-%       \begin{macro}{\fixme*prefix}
-%         \begin{macro}{\fx*indexname}
-%           \begin{macro}{\fixme*indexname}
-%             And we use it for all note types:
+%     \begin{macro}{\fx*name}
+%       \begin{macro}{\fx*indexname}
+%         \begin{macro}{\fixme*indexname}
+%           And we use it for all note types:
 %    \begin{macrocode}
 \@fxnoteparameters{note}
 \@fxnoteparameters{warning}
@@ -1501,7 +1501,6 @@
 \@fxnoteparameters{fatal}
 
 %    \end{macrocode}
-%           \end{macro}
 %         \end{macro}
 %       \end{macro}
 %     \end{macro}
@@ -1534,6 +1533,57 @@
 
 %    \end{macrocode}
 % \end{macro}
+% \begin{macro}{\fxprefix}
+%   \marg{typename}\\
+%   As of version 4, prefix construction has been homogenized through this
+%   macro, rendering the former \cs{fixme*prefix} ones obsolete. Normally, we
+%   would use \cs{@fxnewdeprecatedrcmd} to implement this, but it is not
+%   possible in that case, because there is not a one-to-one correspondance
+%   between a deprecated macro and the superseding one, so step 3 of the
+%   deprecation machanism is impossible. So here is what we do:
+%   \begin{enumerate}
+%   \item keep the old ones in the core of \fixme,
+%   \item predefine them to \cs{empty}
+%   \item \cs{AtBeginDocument}, check if they have been \cs{renewcommand}'ed
+%     (not \cs{empty} anymore), and if so, issue a deprecation warning,
+%   \item otherwise, define them to call the new interface.
+%   \end{enumerate}
+%    \begin{macrocode}
+\newcommand*\fxprefix[1]{\fixmelogo{} #1}
+
+\newcommand*\fixmenoteprefix{}
+\let\fixmenoteprefix\empty
+\newcommand*\fixmewarningprefix{}
+\let\fixmewarningprefix\empty
+\newcommand*\fixmeerrorprefix{}
+\let\fixmeerrorprefix\empty
+\newcommand*\fixmefatalprefix{}
+\let\fixmefatalprefix\empty
+
+\AtBeginDocument{%
+  \ifx\fixmenoteprefix\empty%
+    \renewcommand*\fixmenoteprefix{\fxprefix{\fxnotename}}%
+  \else%
+    \@fxdeprecatedcmdwarning{fixmenoteprefix}{fxnotename}%
+  \fi%
+  \ifx\fixmewarningprefix\empty%
+    \renewcommand*\fixmewarningprefix{\fxprefix{\fxwarningname}}%
+  \else%
+    \@fxdeprecatedcmdwarning{fixmewarningprefix}{fxwarningname}%
+  \fi%
+  \ifx\fixmeerrorprefix\empty%
+    \renewcommand*\fixmeerrorprefix{\fxprefix{\fxerrorname}}%
+  \else%
+    \@fxdeprecatedcmdwarning{fixmeerrorprefix}{fxerrorname}%
+  \fi%
+  \ifx\fixmefatalprefix\empty%
+    \renewcommand*\fixmefatalprefix{\fxprefix{\fxfatalname}}%
+  \else%
+    \@fxdeprecatedcmdwarning{fixmefatalprefix}{fxfatalname}%
+  \fi}
+
+%    \end{macrocode}
+% \end{macro}
 % \begin{macro}{\@fxlayout}
 %   \marg{type}\marg{note}\\
 %   Dispatch all active layouts. Note that we start with the footnote layout,
@@ -1542,7 +1592,7 @@
 %    \begin{macrocode}
 \newcommand*\@fxlayout[2]{%
   \@fxhandleinnermode%
-  \def\@fxtempa{\@nameuse{fx#1prefix}}%
+  \def\@fxtempa{\@nameuse{fixme#1prefix}}%
   \def\@fxtempb{\@nameuse{fx#1indexname}}%
   \def\@fxtempc{\@nameuse{thefx#1count}}%
   \iffx@layout@footnote\FXLayoutFootnote{\@fxtempa}{#2}\fi%
@@ -1566,7 +1616,7 @@
 %    \begin{macrocode}
 \newcommand*\@@fxnote@final[2]{%
   \iffx@log@silent\else\@nameuse{@fxlogcs@#1}{#2}\fi%
-  \fxaddcontentsline{\expandafter\protect\@nameuse{fx#1prefix}: #2}}
+  \fxaddcontentsline{\@nameuse{fixme#1prefix}: #2}}
 \newcommand*\@@fxnote@draft[2]{%
   \@fxlayout{#1}{#2}%
   \@@fxnote@final{#1}{#2}}
@@ -1633,9 +1683,9 @@
 %           call the new versions by default. \cs{FiXmeUser} is treated a bit
 %           differently though (see section \sectionref{sec:code:userlayout}).
 %    \begin{macrocode}
-\newcommand*\FiXmeInline[1]{\FXLayoutInline{\fxfatalprefix}{#1}}
-\newcommand*\FiXmeMargin[1]{\FXLayoutMargin{\fxfatalprefix}{#1}}
-\newcommand*\FiXmeFootnote[1]{\FXLayoutFootnote{\fxfatalprefix}{#1}}
+\newcommand*\FiXmeInline[1]{\FXLayoutInline{\fixmefatalprefix}{#1}}
+\newcommand*\FiXmeMargin[1]{\FXLayoutMargin{\fixmefatalprefix}{#1}}
+\newcommand*\FiXmeFootnote[1]{\FXLayoutFootnote{\fixmefatalprefix}{#1}}
 
 \newcommand*\FiXmeUser[1]{}
 \let\FiXmeUser\empty
@@ -1667,14 +1717,14 @@
   \@fxhandleinnermode%
   \iffx@layout@footnote\FiXmeFootnote{#1}\fi%
   \iffx@layout@margin\FiXmeMargin{#1}\fi%
-  \iffx@layout@marginclue\FXLayoutMarginClue{\fxfatalprefix}\fi%
+  \iffx@layout@marginclue\FXLayoutMarginClue{\fixmefatalprefix}\fi%
   \iffx@layout@inline\FiXmeInline{#1}\fi%
   \iffx@layout@user\FiXmeUser{#1}\fi%
   \iffx@layout@index%
     \FiXmeIndex{\fxfatalindexname\thefxfatalcount: #1}%
   \fi%
   \iffx@log@silent\else\FXLogFatal{#1}\fi%
-  \fxaddcontentsline{\protect\fxfatalprefix: #1}}
+  \fxaddcontentsline{\fixmefatalprefix: #1}}
 
 %    \end{macrocode}
 %   \end{macro}
@@ -1743,7 +1793,7 @@
   \comment}
 \newcommand*\@fxenvbegin@draft[3]{%
   \@nameuse{fx#1}[#2,noinline]{#3}%
-  \FXEnvBegin{\@nameuse{fx#1prefix}}}
+  \FXEnvBegin{\@nameuse{fixme#1prefix}}}
 
 %    \end{macrocode}
 %   \end{macro}
@@ -1798,10 +1848,10 @@
 %   \mbox{}
 %    \begin{macrocode}
 \@fxdefinevoidkey{lang}{english}{%
-  \renewcommand*\fxnoteprefix{\fixmelogo\nobreakspace Note}%
-  \renewcommand*\fxwarningprefix{\fixmelogo\nobreakspace Warning}%
-  \renewcommand*\fxerrorprefix{\fixmelogo\nobreakspace Error}%
-  \renewcommand*\fxfatalprefix{\fixmelogo}%
+  \renewcommand*\fxnotename{Note}%
+  \renewcommand*\fxwarningname{Warning}%
+  \renewcommand*\fxerrorname{Error}%
+  \renewcommand*\fxfatalname{Fatal}%
   \renewcommand*\fixmeindexname{\fixmelogo}%
   \renewcommand*\fxnoteindexname{**a@Notes:!}%
   \renewcommand*\fxwarningindexname{**b@Warnings:!}%
@@ -1814,10 +1864,10 @@
 %   \mbox{}
 %    \begin{macrocode}
 \@fxdefinevoidkey{lang}{french}{%
-  \renewcommand*\fxnoteprefix{\fixmelogo\nobreakspace Note}%
-  \renewcommand*\fxwarningprefix{\fixmelogo\nobreakspace Attention}%
-  \renewcommand*\fxerrorprefix{\fixmelogo\nobreakspace Erreur}%
-  \renewcommand*\fxfatalprefix{\fixmelogo}%
+  \renewcommand*\fxnotename{Note}%
+  \renewcommand*\fxwarningname{Attention}%
+  \renewcommand*\fxerrorname{Erreur}%
+  \renewcommand*\fxfatalname{Fatal}%
   \renewcommand*\fixmeindexname{\fixmelogo}%
   \renewcommand*\fxnoteindexname{**a@Notes:!}%
   \renewcommand*\fxwarningindexname{**b@Avertissements:!}%
@@ -1836,10 +1886,10 @@
 %   \mbox{}
 %    \begin{macrocode}
 \@fxdefinevoidkey{lang}{spanish}{%
-  \renewcommand*\fxnoteprefix{\fixmelogo\nobreakspace Nota}%
-  \renewcommand*\fxwarningprefix{\fixmelogo\nobreakspace Aviso}%
-  \renewcommand*\fxerrorprefix{\fixmelogo\nobreakspace Error}%
-  \renewcommand*\fxfatalprefix{\fixmelogo}%
+  \renewcommand*\fxnotename{Nota}%
+  \renewcommand*\fxwarningname{Aviso}%
+  \renewcommand*\fxerrorname{Error}%
+  \renewcommand*\fxfatalname{FIXME}%
   \renewcommand*\fixmeindexname{\fixmelogo}%
   \renewcommand*\fxnoteindexname{**a@Notas:!}%
   \renewcommand*\fxwarningindexname{**b@Avisos:!}%
@@ -1852,10 +1902,10 @@
 %   \mbox{}
 %    \begin{macrocode}
 \@fxdefinevoidkey{lang}{italian}{%
-  \renewcommand*\fxnoteprefix{\fixmelogo\nobreakspace Nota}%
-  \renewcommand*\fxwarningprefix{\fixmelogo\nobreakspace Avviso}%
-  \renewcommand*\fxerrorprefix{\fixmelogo\nobreakspace Errore}%
-  \renewcommand*\fxfatalprefix{\fixmelogo}%
+  \renewcommand*\fxnotename{Nota}%
+  \renewcommand*\fxwarningname{Avviso}%
+  \renewcommand*\fxerrorname{Errore}%
+  \renewcommand*\fxfatalname{FIXME}%
   \renewcommand*\fixmeindexname{\fixmelogo}%
   \renewcommand*\fxnoteindexname{**a@Note:!}%
   \renewcommand*\fxwarningindexname{**b@Avvisi:!}%
@@ -1868,10 +1918,10 @@
 %   \mbox{}
 %    \begin{macrocode}
 \@fxdefinevoidkey{lang}{german}{%
-  \renewcommand*\fxnoteprefix{\fixmelogo\nobreakspace Anm}%
-  \renewcommand*\fxwarningprefix{\fixmelogo\nobreakspace Warnung}%
-  \renewcommand*\fxerrorprefix{\fixmelogo\nobreakspace Fehler}%
-  \renewcommand*\fxfatalprefix{\fixmelogo}%
+  \renewcommand*\fxnotename{Anm}%
+  \renewcommand*\fxwarningname{Warnung}%
+  \renewcommand*\fxerrorname{Fehler}%
+  \renewcommand*\fxfatalname{FIXME}%
   \renewcommand*\fixmeindexname{\fixmelogo}%
   \renewcommand*\fxnoteindexname{**a@Anmerkungen:!}%
   \renewcommand*\fxwarningindexname{**b@Warnungen:!}%
@@ -1890,10 +1940,10 @@
 %   \mbox{}
 %    \begin{macrocode}
 \@fxdefinevoidkey{lang}{danish}{%
-  \renewcommand*\fxnoteprefix{\fixmelogo\nobreakspace Note}%
-  \renewcommand*\fxwarningprefix{\fixmelogo\nobreakspace Advarsel}%
-  \renewcommand*\fxerrorprefix{\fixmelogo\nobreakspace Fejl}%
-  \renewcommand*\fxfatalprefix{\fixmelogo}%
+  \renewcommand*\fxnotename{Note}%
+  \renewcommand*\fxwarningname{Advarsel}%
+  \renewcommand*\fxerrorname{Fejl}%
+  \renewcommand*\fxfatalname{FIXME}%
   \renewcommand*\fixmeindexname{\fixmelogo}%
   \renewcommand*\fxnoteindexname{**a@Noter:!}%
   \renewcommand*\fxwarningindexname{**b@Advarsler:!}%
@@ -1906,10 +1956,10 @@
 %   \mbox{}
 %    \begin{macrocode}
 \@fxdefinevoidkey{lang}{croatian}{%
-  \renewcommand*\fxnoteprefix{\fixmelogo\nobreakspace Poruka}%
-  \renewcommand*\fxwarningprefix{\fixmelogo\nobreakspace Upozorenje}%
-  \renewcommand*\fxerrorprefix{\fixmelogo\nobreakspace Gre\v ska}%
-  \renewcommand*\fxfatalprefix{\fixmelogo}%
+  \renewcommand*\fxnotename{Poruka}%
+  \renewcommand*\fxwarningname{Upozorenje}%
+  \renewcommand*\fxerrorname{Gre\v ska}%
+  \renewcommand*\fxfatalname{FIXME}%
   \renewcommand*\fixmeindexname{\fixmelogo}%
   \renewcommand*\fxnoteindexname{**a@Poruke:!}%
   \renewcommand*\fxwarningindexname{**b@Upozorenja:!}%
@@ -2047,11 +2097,11 @@
 %    \begin{macrocode}
 \AtBeginDocument{%
   \ifthenelse{\NOT\isundefined{\FXLayoutUser}}{%
-    \renewcommand\FiXmeUser[1]{\FXLayoutUser{\fxfatalprefix}{#1}}}{%
+    \renewcommand\FiXmeUser[1]{\FXLayoutUser{\fixmefatalprefix}{#1}}}{%
     \ifthenelse{\NOT\isundefined{\FXUser}}{%
       \@fxdeprecatedcmdwarning{FXUser}{FXLayoutUser}%
       \newcommand\FXLayoutUser[2]{\FXUser{#1}{#2}}%
-      \renewcommand\FiXmeUser[1]{\FXUser{\fxfatalprefix}{#1}}}{%
+      \renewcommand\FiXmeUser[1]{\FXUser{\fixmefatalprefix}{#1}}}{%
       \ifx\FiXmeUser\empty%
         \renewcommand\FiXmeUser[1]{}%
       \else%
